# panta_ft_bicodec

./: .gitignore  main.py  pyproject.toml  train.sh
src/panta_ft_bicodec/: constant.py  read_config.py
src/panta_ft_bicodec/config/: config.yaml  config_1.yaml  config_2.yaml  config_3.yaml  config_4.yaml  config_5.yaml  config_6.yaml  config_7.yaml  config_8.yaml
src/panta_ft_bicodec/data/: bbd.py  bdd.py  compte_hours.py  dataset.py  epac.out  filter.py  filter_bdd.py  mls.out  move_data.py  pull_data.slurm  pull_data_2.slurm  utils.py
src/panta_ft_bicodec/evaluate/: run_baseline.py  run_model.py  utils.py
src/panta_ft_bicodec/model/: bicodec_tokenizer.py  disciminator.py
src/panta_ft_bicodec/model/utils_bicodec/: audio.py  bicodec.py  file.py
src/panta_ft_bicodec/model/utils_bicodec/modules/encoder_decoder/: feat_decoder.py  feat_encoder.py  wave_generator.py
src/panta_ft_bicodec/model/utils_bicodec/modules/fsq/: residual_fsq.py
src/panta_ft_bicodec/model/utils_bicodec/modules/speaker/: ecapa_tdnn.py  speaker_encoder.py
src/panta_ft_bicodec/model/utils_bicodec/modules/vq/: factorized_vector_quantize.py
src/panta_ft_bicodec/training/: compte_params.py  debug.sh  launch.slurm  launch_2.slurm  launch_3.slurm  launch_4.slurm  launch_5.slurm  launch_6.slurm  launch_7.slurm  launch_8.slurm  loss.py  training_ft_bicodec.py  training_ft_single_voice.py  utils.py  utils_multi_gpu.py
src/panta_ft_bicodec/training/logs_slurm/: first.err  first.out  second.err
