[project]
name = "panta-ft-bicodec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "einx>=0.4.3",
    "idr-torch>=2.5.0",
    "mistral-common>=1.11.2",
    "mlflow>=3.12.0",
    "omegaconf>=2.3.0",
    "safetensors>=0.7.0",
    "soundfile>=0.13.1",
    "soxr>=1.1.0",
    "timm>=1.0.27",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.8.1",
]





[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
